@@ -11,6 +11,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Dirk Deimeke
   Wim Schuermann
   Jelle van der Waa
+  Sergey Trofimov
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
